src/styles/forms.sass
.edg-search
  align-items: center
  display: flex
  flex-wrap: wrap
  margin: 0 auto
  width: 100%
  h4
    font-weight: 600
  .p-input-icon-left
    align-items: center
    display: flex
    .reset
      color: var(--gray)
      margin-left: -2rem
    & > svg
      margin: -0.5rem 0 0 1.25rem
    .p-inputtext
      background: transparent
      border: 1px solid var(--grey)
      border-radius: 0.5rem
      font-size: 1rem
      padding: 1rem 1.375rem 1rem 3.125rem
      width: calc(100% - 2rem)
    a
      font-size: 1.5rem
      margin-left: auto
      padding: 8px 0

.input__wrapper
  width: 100%
.p-field
  align-content: flex-end
  width: 100%
  label
    display: block
    font-weight: 700
    size: 1rem
    color: var(--green-earth)
  .p-inputnumber
    width: 100%
  .p-inputtext:not(.p-dropdown-label)
    background: transparent
    border: 1px solid var(--grey)
    border-radius: 0.5rem
    font-size: 0.75rem
    padding: 1rem
    width: 100%
  .p-calendar
    width: 100%
  .p-multiselect
    background: transparent
    border: 1px solid var(--grey)
    width: 100%
  .p-dropdown
    // display: grid
    background: transparent
    border: 1px solid var(--grey)
    width: 100%
    .p-dropdown-label
      font-size: 0.75rem
      line-height: 1.2em
      padding: 1rem 0 1rem 1rem
      width: 100%
  .p-password
    display: block
  .checkbox__label
    color: var(--grey)
    display: block
    font-weight: 400
    .p-checkbox
      margin-right: 0.625rem
      .p-checkbox-box
        border-color: var(--green-earth)
        &.p-focus
          border-color: var(--green-earth)
        &.p-highlight
          background-color: var(--green-earth)
          border-color: var(--green-earth)
  .social-login
    display: inline-block
    margin: 0 0.625rem
    img
      height: 2.5rem

.p-tabview
  .p-tabview-nav
    align-items: end
    padding-left: 0
    background: var(--blue-versionone)
    li
      background-color: var(--blue-versionone)
      width: 50%
      .p-tabview-nav-link
        background: var(--blue-versionone)
        padding: 0.3125rem 0
        .p-tabview-title
          font-size: 0.75rem
          font-weight: 500
        .pi-angle-left
          margin-right: 0.625rem
    .p-tabview-ink-bar
      background-color: var(--dark-blue)
      height: 0.25rem
      border-radius: 0.625rem

.p-tabview
  .p-tabview-panels
    background: transparent
    font-size: 1rem
    padding: 0.75rem 0 1.875rem

.registerInput__container-x2
  display: flex
  flex-direction: row
  flex-wrap: wrap
  margin: 1.25rem 0
  gap: 0 0.9375rem
  width: 100%
  & > .p-field, & > .input__wrapper, & > button, & > .button
    width: calc((100% - 0.9375rem) / 2)
  .registerInput__container-age, .registerInput__container-weight
    display: flex
    flex-direction: row
    margin: 0
    gap: 0.9375rem
    width: 50%
    .p-field:first-child
      width: 40%
    .p-field:last-child
      width: 60%
.registerInput__container-x1
  display: flex
  flex-direction: column
  margin: 1.25rem 0
  gap: 0.3125rem
  width: 100%

